force-app/main/default/objects/Information__c/Information__c.object-meta.xml
<CustomObject>
    <label>Information</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>