force-app/main/default/objects/Information__c/fields/Date_Active__c.field-meta.xml
<CustomField>
    <fullName>Date_Active__c</fullName>
    <inlineHelpText>DOJ</inlineHelpText>
    <label>Date Active</label>
    <required>true</required>
    <type>Date</type>
</CustomField>