force-app/main/default/objects/Information__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BE/BTech</fullName>
            </value>
            <value>
                <fullName>Degree</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>Deploma</fullName>
            </value>
            <value>
                <fullName>XII</fullName>
            </value>
            <value>
                <fullName>ME/MTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>