force-app/main/default/objects/Information__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Automobile</fullName>
            </value>
            <value>
                <fullName>MME</fullName>
            </value>
            <value>
                <fullName>MPC</fullName>
            </value>
            <value>
                <fullName>BArts</fullName>
            </value>
            <value>
                <fullName>BScience</fullName>
            </value>
            <value>
                <fullName>MArts</fullName>
            </value>
            <value>
                <fullName>MScience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>